=================
Changes for Crate
=================


 - Select queries will now wait a bit longer before throwing an error in case
   the shards of a table aren't fully active.

 - Fix: In some cases a ``DROP TABLE`` statment does not delete all
   partitions. Now it's possible to repeat the statement in order
   to delete the orphaned partitions.

2015/05/07 0.48.4
=================

NOTE: Upgrading from 0.47 or earlier versions requires a full cluster restart

 - Fix: fix update queries on partitioned tables which are partitioned
   by part of the primary key

 - Fix: correctly display initial and reset settings in ``sys.cluster.settings``

 - add dynamic settings ``bulk.request_timeout`` and ``bulk.partition_creation_timeout``

 - make the ``sys.shards.size`` expression refresh all 10 seconds maximum

 - Fixed an issue that caused GROUP BY queries with multiple group keys, no
   order by and limit to hang.

 - Increased performance of ``hostname`` and ``id`` expression for ``sys.nodes`` table

2015/04/28 0.48.3
=================

 - Added possibility to create a single jar which contains all crate packages
   without dependencies

 - Include java client in crate distributions

 - Optimized queries that use ``IN`` or ``ANY``

 - Fix: Prevent COPY FROM or INSERT into a partitioned table to run into timeouts
   when creating many partitions at once

 - Fix: In some cases too few threads where started which could slow
   down queries

 - Fix: Option http.enabled=false caused UDC module to crash on startup

2015/04/21 0.48.2
=================

 - Fixed an issue with GROUP BY queries on partitioned tables which could lead
   to wrong results

 - Optimized retry logic in bulk and COPY operations to handle
   and coordinate retries once per node

 - Fix: Add transparent retry logic to UPDATE execution

 - Using unsupported URI schema in COPY FROM statement now results in an error.

 - Fixed an issue with the LIKE predicate if used on a system table where it