@@ -2,6 +2,8 @@
 Changes for Crate
 =================
 
+ - ``COPY FROM``: imports from S3 will now retry the import in case of a
+   read timeout.
 
  - Select queries will now wait a bit longer before throwing an error in case
    the shards of a table aren't fully active.
